Solve Eliud's Eggs with manual binary transform